[tool.poetry]
name = "lichens"
version = "0.1.0"
description = "ETL framework for Colosscious Pharmquer"
authors = ["thisishugow <59921505+thisishugow@users.noreply.github.com>"]
license = "MIT License"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
sqlalchemy = "^2.0.23"
psycopg-binary = "^3.1.12"
pandas = "^2.1.3"
click = "^8.1.7"
alembic = "^1.12.1"
pendulum = "2.1.2"
pandera = "^0.17.2"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
